Fixed overflow scrolling on swal popups

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -719,7 +719,7 @@ html.swal2-height-auto {
 
 .cclike-popup {
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol !important;
-	display: flex;
+	display: flex !important;
 	flex-direction: column;
 	max-height: min(37.5em, calc(100vh - 2.5em));
 	width: 100%;
